# music-platform

./: RESULTS.md  pyproject.toml
musicplatform/: .env.example  manage.py
musicplatform/accounts/: forms.py  urls.py  views.py
musicplatform/accounts/templates/accounts/: login.html  register.html
musicplatform/albums/: admin.py  factories.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_reviewed_by_admin.py  0003_alter_album_created_at.py  0004_alter_album_reviewed_by_admin.py  0005_remove_album_created_at_album_created_album_modified.py  0006_song.py
musicplatform/albums/templates/albums/: create.html  index.html
musicplatform/albums/tests/: test_endpoints.py  test_serializers.py
musicplatform/artists/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py  0002_alter_artist_stage_name.py  0003_artist_user.py  0004_alter_artist_user.py
musicplatform/artists/templates/artists/: create.html  index.html
musicplatform/artists/tests/: test_endpoints.py
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/authentication/tests/: test_endpoints.py
musicplatform/musicplatform/: celery.py  settings.py  urls.py
musicplatform/users/: factories.py  models.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py  0002_user_bio.py
musicplatform/users/tests/: test_endpoints.py
